force-app/main/default/objects/Apttus_Config2__OrderFulfillmentLineItem__c/Apttus_Config2__OrderFulfillmentLineItem__c.object-meta.xml
<CustomObject>
    <description>Represents a fulfillment line item associated with one or more orders</description>
    <label>Order Fulfillment Line Item</label>
    <nameField>
        <displayFormat>FI-{0000000000}</displayFormat>
        <label>LineItem Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Fulfillment Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>