force-app/main/default/objects/Apttus_Config2__OrderFulfillmentLineItem__c/fields/Apttus_Config2__FulfilledQuantity__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__FulfilledQuantity__c</fullName>
    <description>The fulfillment quantity for the order item</description>
    <inlineHelpText>The fulfillment quantity for the order item</inlineHelpText>
    <label>Fulfilled Quantity</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>