force-app/main/default/objects/Apttus_Config2__OrderFulfillmentLineItem__c/fields/Apttus_Config2__FulfillmentInProgress__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__FulfillmentInProgress__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether fulfillment is in progress</description>
    <inlineHelpText>Indicates whether fulfillment is in progress</inlineHelpText>
    <label>Fulfillment In Progress?</label>
    <type>Checkbox</type>
</CustomField>