force-app/main/default/objects/Apttus_Config2__OrderFulfillmentLineItem__c/fields/Apttus_Config2__OrderFulfillmentId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__OrderFulfillmentId__c</fullName>
    <description>ID of the associated order fulfillment</description>
    <inlineHelpText>ID of the associated order fulfillment</inlineHelpText>
    <label>Order Fulfillment</label>
    <referenceTo>Apttus_Config2__OrderFulfillment__c</referenceTo>
    <relationshipLabel>Order Fulfillment Line Items</relationshipLabel>
    <relationshipName>OrderFulfillmentLineItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>