force-app/main/default/objects/Apttus_Config2__OrderFulfillmentLineItem__c/fields/Apttus_Config2__OrderLineItemId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__OrderLineItemId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the associated order line item</description>
    <inlineHelpText>ID of the associated order line item</inlineHelpText>
    <label>Order Line Item</label>
    <referenceTo>Apttus_Config2__OrderLineItem__c</referenceTo>
    <relationshipLabel>Order Fulfillment Line Items</relationshipLabel>
    <relationshipName>OrderFulfillmentLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>