force-app/main/default/objects/Apttus_Config2__OrderFulfillmentLineItem__c/fields/Apttus_Config2__Status__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Status__c</fullName>
    <description>The order fulfillment line status</description>
    <inlineHelpText>The order fulfillment line status</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fulfilled</fullName>
                <default>true</default>
                <label>Fulfilled</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>